--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>PIG DICE</title>
 </head>
 
-<body style="background:url(https://images-na.ssl-images-amazon.com/images/I/71orpL69QJL._SX425_.jpg)100% 100%">
+<body>
   <div class="container">
     <div class="jumbotron">
       <div id="section-1">
